no reloading on the tablet

--- a/tablet.html
+++ b/tablet.html
@@ -502,7 +502,7 @@
 	}
 	setInterval(updateTime, 1000);
 
-	setTimeout(function(){ location.reload(); }, 3600000);
+	// setTimeout(function(){ location.reload(); }, 3600000);
 
 	function clearTimeouts() {
 		clearTimeout(currentTimeout);
