--- a/tablet.html
+++ b/tablet.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 	<div id=weather class=container-fluid >
-		<h4>Weather Updates</h4>
+		<h3>Weather Updates <span style='float:right;' class=time></h3>
 		<div id=currentWeather class=container-fluid></div>
 		<div id=futureWeather class=container-fluid></div>
 	</div>
