change address for Kingly Court

--- a/index.html
+++ b/index.html
@@ -601,9 +601,9 @@
 			{ id: "camden_transit", origin: "SW1X 0HT", destination: "Camden Market", mode: "transit" },
 			{ id: "heathrow_transit", origin: "SW1X 0HT", destination: "Heathrow Terminal 5", mode: "transit" },
 			{ id: "gatwick_transit", origin: "SW1X 0HT", destination: "Gatwick Airport South", mode: "transit" },
-			{ id: "kingly_walk", origin: "SW1X 0HT", destination: "Kingly Court", mode: "walking" },
-			{ id: "kingly_bike", origin: "SW1X 0HT", destination: "Kingly Court", mode: "bicycling" },
-			{ id: "kingly_transit", origin: "SW1X 0HT", destination: "Kingly Court", mode: "transit" },
+			{ id: "kingly_walk", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "walking" },
+			{ id: "kingly_bike", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "bicycling" },
+			{ id: "kingly_transit", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "transit" },
 			{ id: "coventgarden_bike", origin: "SW1X 0HT", destination: "Covent Garden", mode: "walking" },
 			{ id: "coventgarden_transit", origin: "SW1X 0HT", destination: "Covent Garden", mode: "bicycling" },
 			{ id: "coventgarden_walk", origin: "SW1X 0HT", destination: "Covent Garden", mode: "transit" },
