line up modes of transit with their correct column in commute times

--- a/index.html
+++ b/index.html
@@ -604,12 +604,12 @@
 			{ id: "kingly_walk", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "walking" },
 			{ id: "kingly_bike", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "bicycling" },
 			{ id: "kingly_transit", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "transit" },
-			{ id: "coventgarden_bike", origin: "SW1X 0HT", destination: "Covent Garden", mode: "walking" },
-			{ id: "coventgarden_transit", origin: "SW1X 0HT", destination: "Covent Garden", mode: "bicycling" },
-			{ id: "coventgarden_walk", origin: "SW1X 0HT", destination: "Covent Garden", mode: "transit" },
-			{ id: "southken_bike", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "walking" },
-			{ id: "southken_transit", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "bicycling" },
-			{ id: "southken_walk", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "transit" }
+			{ id: "coventgarden_bike", origin: "SW1X 0HT", destination: "Covent Garden", mode: "bicycling" },
+			{ id: "coventgarden_transit", origin: "SW1X 0HT", destination: "Covent Garden", mode: "transit" },
+			{ id: "coventgarden_walk", origin: "SW1X 0HT", destination: "Covent Garden", mode: "walking" },
+			{ id: "southken_bike", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "bicycling" },
+			{ id: "southken_transit", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "transit" },
+			{ id: "southken_walk", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "walking" }
 		];
 
 
