--- a/index.html
+++ b/index.html
@@ -604,9 +604,9 @@
 			{ id: "kingly_walk", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "walking" },
 			{ id: "kingly_bike", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "bicycling" },
 			{ id: "kingly_transit", origin: "SW1X 0HT", destination: "W1B 5PW", mode: "transit" },
-			{ id: "coventgarden_bike", origin: "SW1X 0HT", destination: "Covent Garden", mode: "bicycling" },
-			{ id: "coventgarden_transit", origin: "SW1X 0HT", destination: "Covent Garden", mode: "transit" },
-			{ id: "coventgarden_walk", origin: "SW1X 0HT", destination: "Covent Garden", mode: "walking" },
+			{ id: "coventgarden_bike", origin: "SW1X 0HT", destination: "WC2E 8RD ", mode: "bicycling" },
+			{ id: "coventgarden_transit", origin: "SW1X 0HT", destination: "WC2E 8RD ", mode: "transit" },
+			{ id: "coventgarden_walk", origin: "SW1X 0HT", destination: "WC2E 8RD ", mode: "walking" },
 			{ id: "southken_bike", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "bicycling" },
 			{ id: "southken_transit", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "transit" },
 			{ id: "southken_walk", origin: "SW1X 0HT", destination: "South Kensington Station", mode: "walking" }
